# pitch_calc

./: .travis.yml  Cargo.toml  README.md
examples/: test.rs
src/: calc.rs  convert.rs  hz.rs  letter.rs  letter_octave.rs  lib.rs  mel.rs  perc.rs  pitch_enum.rs  scaled_perc.rs  serde.rs  serde_tests.rs  step.rs  utils.rs
tests/: serde.rs
