[package]

name = "pitch_calc"
description = "A library for musical pitch conversions! Provides functions and methods for converting between frequency, midi-step and letter-octave."
version = "0.11.1"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "README.md"
keywords = ["pitch", "dsp", "audio", "music", "conversion"]
license = "Apache-2.0/MIT"
repository = "https://github.com/RustAudio/pitch_calc.git"
homepage = "https://github.com/RustAudio/pitch_calc"

[dependencies]
num = "0.1.28"
rand = "0.3.12"
serde = { optional = true, version = "1.0.8" }
serde_derive = { optional = true, version = "1.0.8" }
serde_json = { optional = true, version = "1.0.2" }

[features]
serde_serialization = ["serde", "serde_derive", "serde_json"]
