[package]
name = "pitch_calc"
description = "A library for musical pitch conversions! Provides functions and methods for converting between frequency, midi-step and letter-octave."
version = "0.12.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "README.md"
keywords = ["pitch", "dsp", "audio", "music", "conversion"]
license = "Apache-2.0/MIT"
repository = "https://github.com/RustAudio/pitch_calc.git"
homepage = "https://github.com/RustAudio/pitch_calc"
edition = "2021"

[features]
serde = ["dep:serde"]

[dependencies]
num-traits = "0.2"
rand = { version = "0.9", default-features = false }
serde = { optional = true, version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1" }
